--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,11 @@ project(Dragons)
 
 set(CMAKE_CXX_STANDARD 14)
 
+find_package(Boost 1.57.0 COMPONENTS system filesystem REQUIRED)
+include_directories(${Boost_INCLUDE_DIRS})
+add_executable(BoostTest main.cpp)
+target_link_libraries(BoostTest ${Boost_LIBRARIES})
+
 add_executable(Dragons
         Edge.h
         Edge.cpp
