Added boost to project Replaced hacking prime number lookup with boost::math::prime Made type usage more explicit when interoperating with Primes and ints. I think I need to introduce a new class for counting numbers and use tht instead of ints. Moved source into subdirectory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,20 +6,20 @@ set(CMAKE_CXX_STANDARD 14)
 
 find_package(Boost 1.57.0 COMPONENTS system filesystem REQUIRED)
 include_directories(${Boost_INCLUDE_DIRS})
-add_executable(BoostTest main.cpp)
+add_executable(BoostTest src/main.cpp)
 target_link_libraries(BoostTest ${Boost_LIBRARIES})
 
 add_executable(Dragons
-        Edge.h
-        Edge.cpp
-        MinSet.h
-        MinSet.cpp
-        House.h
-        House.cpp
-        Prime.h
-        Prime.cpp
-        Plank.cpp
-        Plank.h
-        Spell.cpp
-        Spell.h
-        Dragons.h Dragon.cpp Dragon.h test/TestPlank.cpp test/TestEdge.cpp Plane.cpp Plane.h test/TestHouse.cpp test/TestDragon.cpp Func.cpp Func.h)
+        src/Edge.h
+        src/Edge.cpp
+        src/MinSet.h
+        src/MinSet.cpp
+        src/House.h
+        src/House.cpp
+        src/Prime.h
+        src/Prime.cpp
+        src/Plank.cpp
+        src/Plank.h
+        src/Spell.cpp
+        src/Spell.h
+        src/Dragons.h src/Dragon.cpp src/Dragon.h test/TestPlank.cpp test/TestEdge.cpp src/Plane.cpp src/Plane.h test/TestHouse.cpp test/TestDragon.cpp src/Func.cpp src/Func.h)
